# MIDI-GPT

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  create_dataset_compute_canada.sh  create_python_library.sh  data_split.sh  midigpt_setup_helper.sh  setup.py
include/dataset_creation/compression/: lz4.h
include/dataset_creation/dataset_manipulation/: bytes_to_file.h
libraries/protobuf/: CMakeLists.txt
libraries/protobuf/include/: proto_library.h
libraries/protobuf/src/: enum.proto  feature_extraction.proto  midi.proto  midi_internal.proto  track_type.proto
libraries/torch/: CMakeLists.txt
libraries/torch/include/: torch_library.h
libraries/torch/src/: torch_library.cpp
pip_requirements/: create_dataset_requirements.txt  train_requirements.txt
python_scripts/: convert.py  create_dataset.py  custom_models.py  data_split.py  losses.py  train.py  train_dataset.py  utils.py
python_scripts/config/: bert.json  bert_tiny.json  gpt2.json  gpt2_tiny.json
python_scripts_for_testing/: midigpt_gen.mid  mtest.mid  pythoninferencetest.py
src/: lib.cpp  lib_encoder.h  trace.cpp
src/common/data_structures/: encoder_config.h  token_sequence.h  track_type.h  train_config.cpp  train_config.h  verbosity.h
src/common/encoder/: attribute_control.h  encoder_all.h  encoder_base.h  representation.h  token_domain.h  util.h
src/common/midi_parsing/: adjacent_range.h  feature_extraction.h  midi_io.h  util_protobuf.h
src/dataset_creation/compression/: lz4.c
src/dataset_creation/dataset_manipulation/: bytes_to_file.cpp
src/inference/: random.h  version.h
src/inference/dataset/: jagged.h  lz4.h
src/inference/enum/: constants.h  density.h  encoder_types.h  gm.h  model_type.h  pretrain_group.h  timesigs.h  velocity.h
src/inference/protobuf/: rsj.h  validate.h
src/inference/sampling/: callback_base.h  control.h  graph.h  multi_step.h  multi_step_sample.h  sample_internal.h
src/inference/xxh/: xxh3.h  xxhash.h
